# core.Motogestion.api

./: .dockerignore  .editorconfig  .env.prod.example  .gitignore  .pre-commit-config.yaml  DDl.sql  DEPLOYMENT.md  Dockerfile  Dockerfile.prod  MIGRATION.md  README.md  RUN.md  UPDATE_DEPLOYMENT.md  babel.ini  config.py  cspell.json  db_dump.py  deploy-gcp.sh  docker-compose.prod.yaml  docker-compose.prod.yml  docker-compose.yaml  i18n.sh  k6.js  main.py  messages.pot  pyproject.toml  requirements.txt  sonar-project.properties
.github/: pull_request_template.md
Scriptsmotogestion/: ScripVistas.sql  Scrips_prueba_triggers.sql  ScriptEjecutable.sql  ScriptSequencias.sql  Scriptsalteraciontablas.sql  Scriptsauditoria.sql  Scriptspaquetes.sql  Scriptsparaborrar.sql  Scriptsparacreartablas.sql  Scriptsregistros.sql  Scriptstriggers.sql  script_esquema.sql
api/: __init__.py
db/: full_schema.sql  full_schema_v2_multitenant.sql  migration_inventario.sql  seed_usuarios_demo.sql
repository/: base_repository.py
templates/: base.html  base_operation.html  closed_operation.html  file_version_update_email_template.html  new_file_uploaded_email_template.html  new_international_confirmation_template.html  new_international_offer_template.html  new_national_confirmation_template.html  new_national_offer_template.html  new_operation_to_quotation_template.html  order_message_email_template.html  status_update_email_template.html
tests/: auth0_provider_test.py  email_service_test.py  location_service_test.py  offer_location_service_test.py  offer_service_test.py  (+10 more)
(+187 files in other folders)
